--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>FlashCard App</title>
   </head>
-  <body>
+  <body className="dark">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root" style="height: 100vh"></div>
     <!--
